--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,21 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-core</artifactId>
+    <version>3.12.4</version> <!-- Use the latest version -->
+    <scope>test</scope>
+	</dependency>
+    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>RELEASE</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+    	<groupId>com.roifmr</groupId>
+    	<artifactId>abstractclassexample</artifactId>
+    	<version>1.0.0</version>
     </dependency>
   </dependencies>
 
