mybatis impl of client dao queries

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -23,5 +23,5 @@ logger.monitorOne.level = warn
 logger.monitorTwo.name = org.springframework.beans.factory.support.DefaultListableBeanFactory
 logger.monitorTwo.level = warn
 
-logger.monitorThree.name = com.fidelity.integration.EmployeeMapper
-logger.monitorThree.level = trace
+logger.monitorThree.name = com.fidelity.integration.ClientDaoImpl
+logger.monitorThree.level = debug
