--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -1,18 +1,14 @@
-status = warn
-dest = err
-name = PropertiesConfig
+# Define a logger for MyBatis
+log4j.logger.org.apache.ibatis=DEBUG, mybatisAppender
 
-appender.console.type = Console
-appender.console.name = Console
-appender.console.target = SYSTEM_OUT
-appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d{HH:mm:ss.SSS} %-5p %c{36} - %m%n
-
-rootLogger.level = warn
-rootLogger.appenderRef.stdout.ref = Console
+# Define the appender to log MyBatis messages to a file
+log4j.appender.mybatisAppender=org.apache.log4j.RollingFileAppender
+log4j.appender.mybatisAppender.MaxBackupIndex=5
+log4j.appender.mybatisAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.mybatisAppender.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %p [%c] - %m%n
 
 
-loggers = monitorOne,monitorTwo,monitorThree
+loggers = monitorOne,monitorTwo,monitorThree, monitorFour
 
 logger.monitorOne.name = org.springframework.beans.factory.xml.XmlBeanDefinitionReader
 logger.monitorOne.level = warn
@@ -23,5 +19,9 @@ logger.monitorOne.level = warn
 logger.monitorTwo.name = org.springframework.beans.factory.support.DefaultListableBeanFactory
 logger.monitorTwo.level = warn
 
-logger.monitorThree.name = com.fidelity.integration.EmployeeMapper
-logger.monitorThree.level = trace
+logger.monitorThree.name = com.cerebros.integration.TradesMapper
+logger.monitorThree.level = Trace
+
+
+logger.monitorFour.name = com.cerebros.integration.PortfolioMapper
+logger.monitorFour.level = Trace
