impl mybatis for client register and login

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -8,7 +8,7 @@ appender.console.target = SYSTEM_OUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %d{HH:mm:ss.SSS} %-5p %c{36} - %m%n
 
-rootLogger.level = warn
+rootLogger.level = debug
 rootLogger.appenderRef.stdout.ref = Console
 
 
