--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -25,5 +25,5 @@ logger.monitorThree.name = com.cerebros.integration.TradesMapper
 logger.monitorThree.level = trace
 
 
-logger.monitorFour.name = com.cerebros.integration.PortfolioMapper
+logger.monitorFour.name = com.cerebros.integration.mapper.PortfolioMapper
 logger.monitorFour.level = trace
