--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <slf4j.version>1.7.25</slf4j.version>
 
     <!-- Spring -->
-    <spring-framework.version>5.0.8.RELEASE</spring-framework.version>
+    <spring-framework.version>5.3.0</spring-framework.version>
 
   </properties>
   <dependencies>
