--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -21,7 +21,7 @@ logger.monitorOne.level = warn
 logger.monitorTwo.name = org.springframework.beans.factory.support.DefaultListableBeanFactory
 logger.monitorTwo.level = warn
 
-logger.monitorThree.name = com.cerebros.integration.TradesMapper
+logger.monitorThree.name = com.cerebros.integration.mapper.TradesMapper
 logger.monitorThree.level = trace
 
 
