--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,14 @@
       <artifactId>mybatis-spring-boot-starter</artifactId>
       <version>${mybatis.springboot.version}</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter-test -->
+    <dependency>
+      <groupId>org.mybatis.spring.boot</groupId>
+      <artifactId>mybatis-spring-boot-starter-test</artifactId>
+      <version>2.3.1</version>
+      <scope>test</scope>
+    </dependency>
+
 
     <!-- Spring Boot Actuator: STS Properties tab will list REST controller request mappings -->
     <dependency>
