--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,10 @@ spring.datasource.username=scott
 spring.datasource.password=TIGER
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
+
+
+#FMTS properties
+fmts.api.url=http://localhost:3000/
 # Logging config.
 # See https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/#boot-features-logging
 
