--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,14 @@
       <groupId>com.fasterxml.jackson.dataformat</groupId>
       <artifactId>jackson-dataformat-xml</artifactId>
     </dependency>
-<!--    <dependency>-->
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310 -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+<!--      <version>2.15.2</version>-->
+    </dependency>
+
+    <!--    <dependency>-->
 <!--      <groupId>org.junit.jupiter</groupId>-->
 <!--      <artifactId>junit-jupiter-params</artifactId>-->
 <!--      <version>5.10.0</version>-->
