--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,9 @@ spring.datasource.password=TIGER
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 
+# Allow requests from localhost:4200
+spring.mvc.cors.allowed-origins=http://localhost:4200
+
 
 #FMTS properties
 fmts.api.url=http://localhost:3000/
